--- a/styles/all/theme/scrolltotop.css
+++ b/styles/all/theme/scrolltotop.css
@@ -29,9 +29,9 @@
 .scroll-icon:hover{
 	text-decoration: none;
 	cursor: pointer;
+	opacity: 0.8;
 }
 
-/* responsive design */
 @media only screen and (max-width: 700px), only screen and (max-device-width: 700px) {
 	.scroll-icon {
 		bottom: 8px;
