--- a/styles/all/template/event/overall_footer_after.html
+++ b/styles/all/template/event/overall_footer_after.html
@@ -1,6 +1,4 @@
-<div class="scroll-btn">
-	<div class="scroll-btn-arrow"></div>
-</div>
+<div class="scroll-btn"><div class="scroll-btn-arrow"></div></div>
 
 <script>
 
