Fix fade animations to prevent queue blockages (so hover effect still works)

--- a/styles/all/template/event/overall_footer_after.html
+++ b/styles/all/template/event/overall_footer_after.html
@@ -17,10 +17,10 @@ $(function() {
 	$(window).scroll(function() {
 		var pos = $(this).scrollTop();
 		if (pos > settings.min && toTopHidden) {
-			toTop.stop().fadeIn();
+			toTop.stop(true, true).fadeIn();
 			toTopHidden = false;
 		} else if(pos <= settings.min && !toTopHidden) {
-			toTop.stop().fadeOut();
+			toTop.stop(true, true).fadeOut();
 			toTopHidden = true;
 		}
 	});
